# DualContour

./: .polyscope.ini  CLAUDE.md  CMakeLists.txt  README.md  debug_plan.md  debug_plan2.md  imgui.ini  plan.md
src/: dual_contour.cpp  dual_contour.h  implicit.cpp  implicit.h  main.cpp  mesh_sdf.cpp  mesh_sdf.h  qef.cpp  qef.h
tests/: test_dual_contour.cpp  test_mesh_sdf.cpp  test_qef.cpp
